Fix Location and Region components